<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.avsholeh.xlsnet.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/filename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:inputType="text"
                android:textStyle="italic"
                android:hint="@string/input_file_hint" />

            <Button
                android:id="@+id/btnrefresh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/btn_process" />
        </LinearLayout>


        <TextView
            android:id="@+id/path"
            android:layout_below="@+id/process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:textAlignment="center"/>

        <!--group 1-->
        <LinearLayout
            android:id="@+id/group1"
            android:layout_below="@+id/path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_network_type"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="10">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin">
                    <TextView
                        android:id="@+id/network_type_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/network_type"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/network_type_view"
                        android:layout_below="@+id/network_type_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_data"
                        android:text="@string/unknown_value"
                        android:textAlignment="center" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_cell_id"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="10">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin">
                    <TextView
                        android:id="@+id/cell_id_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cell_id"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/cell_id_view"
                        android:layout_below="@+id/cell_id_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_data"
                        android:text="@string/default_value"
                        android:textAlignment="center"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <!--group 2-->
        <LinearLayout
            android:id="@+id/group2"
            android:layout_below="@+id/group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_mcc"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="10">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin">
                    <TextView
                        android:id="@+id/mcc_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mcc"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/mcc_view"
                        android:layout_below="@+id/mcc_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_data"
                        android:text="@string/default_value"
                        android:textAlignment="center"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_mnc"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="10">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin">
                    <TextView
                        android:id="@+id/mnc_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mnc"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/mnc_view"
                        android:layout_below="@+id/mnc_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_data"
                        android:text="@string/default_value"
                        android:textAlignment="center"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <!--group 3-->
        <LinearLayout
            android:id="@+id/group3"
            android:layout_below="@+id/group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_site_name"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="10">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin">
                    <TextView
                        android:id="@+id/site_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/site_name"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/site_name_view"
                        android:layout_below="@+id/site_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_data"
                        android:text="@string/unknown_value"
                        android:textAlignment="center"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_sector"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="10">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_margin">
                    <TextView
                        android:id="@+id/sector_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sector"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/sector_view"
                        android:layout_below="@+id/sector_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_data"
                        android:text="@string/default_value"
                        android:textAlignment="center"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_below="@+id/group3"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:text="@string/tips" />

        <TextView
            android:id="@+id/textView2"
            android:layout_below="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tips1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tips2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_below="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tips3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tips4" />

    </RelativeLayout>
</ScrollView>